--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+TELEGRAM_TOKEN=telegram-token
+SENTRY_LARAVEL_DSN=https://<key>@sentry.io/<project>
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
