Add webhook route

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-TELEGRAM_TOKEN=telegram-token
+TELEGRAM_TOKEN=<telegram-token>
+TELEGRAM_WEBHOOK_ROUTE=<webhook-route>
 SENTRY_LARAVEL_DSN=https://<key>@sentry.io/<project>
 
 DB_CONNECTION=mysql
