--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=heroku
 
 TELEGRAM_TOKEN=<telegram-token>
 TELEGRAM_WEBHOOK_ROUTE=<webhook-route>
